--- a/style.css
+++ b/style.css
@@ -7,6 +7,7 @@
 
 ul{
     list-style: none;
+    align-items: center;
 }
 
 body{
@@ -61,7 +62,7 @@ body{
     }
 }
 .roll-button{
-    padding: 8px 10px;
+    padding: 8px ;
     font-style: 18px;
     border-radius: 10px;
     border: none;
@@ -71,7 +72,9 @@ body{
     cursor: pointer;
     color: white;
 }
-
+.history-list , .history-item{
+   margin-left: -28px;
+}
 .roll-button:active{
     transform: scale(0.95);
 }
